# optimize

./: categorize.py  main.py  pyproject.toml  requirements.txt  stock_list.xlsx
