[tool.poetry]
name = "optimize"
version = "0.1.0"
description = ""
authors = ["Mack Haymond <mack.haymond@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
pandas = "^2.2.3"
yfinance = "^0.2.50"
cvxpy = "^1.6.0"
rich = "^13.9.4"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
